# mining

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  MAINNET_DATA.md  MAINNET_RUNBOOK.md  README.md  TESTNET_DATA.md  package.json
deployments/: x1-testnet.json
metadata/: mind-v2.json
programs/mining_v2/src/: lib.rs
programs/pocm_vault_mining/: Cargo.toml
programs/pocm_vault_mining/src/: lib.rs
scripts/: burn-mind.ts  init.ts  mainnet-v2-deploy.sh  mainnet-v2-init-rig-buff.ts  mainnet-v2-init.ts  mainnet-v2-smoke.ts  recompute-staking-weighted.ts  set-metadata.ts  testnet-v2-deploy.sh  testnet-v2-init-rig-buff.ts  testnet-v2-init.ts  testnet-v2-smoke.ts  update-xp.ts  v2-common.ts  withdraw-staking-rewards.ts
tests/: mining_v2.ts
web/: README.md  TESTING.md  bn.js.d.ts  buffer-layout.d.ts  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/e2e/: page.tsx
web/components/: AdminPanel.tsx  PublicPanel.tsx  Ui.tsx  WalletProviders.tsx
web/components/admin/: AdminNav.tsx
web/components/dashboard/: AccountProgressionPanel.tsx  ActionWizard.tsx  AdminDashboard.tsx  AdminDataDashboard.tsx  DashboardContext.tsx  (+12 more)
web/idl/: mining_v2.json  pocm_vault_mining.json  x1mind.json
web/lib/: adminAlertsStore.ts  adminData.ts  adminMetricsStore.ts  anchor.ts  bs58-shim.ts  decoders.ts  format.ts  formatError.ts  healthScoring.ts  pino-pretty-shim.ts  polyfillBufferClient.ts  solana.ts  telemetryClient.ts  x1mind.ts  x1mindAnchor.ts
(+26 files in other folders)
