[package]
name = "pocm-vault-mining"
version = "0.1.0"
description = "Proof-of-Commitment Mining vault for X1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pocm_vault_mining"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0", features = ["token", "associated_token"] }
solana-program = "=1.16.27"
borsh = "0.10.4"
proc-macro2 = { version = "1.0.103", features = ["span-locations"] }
